--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Patient Dagbok</title>
-	<link rel="manifest" href="manifest-patient.json">
+	<title>Raid Messenger</title>
+	<link rel="manifest" href="manifest.json">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta content="yes" name="apple-mobile-web-app-capable" />
