--- a/public/index.html
+++ b/public/index.html
@@ -378,9 +378,9 @@
 		var wrapper = document.getElementById(id);
 			wrapper.parentElement.removeChild(wrapper);
 	});
-	socket.on('disconnect', function () {
+	/*socket.on('disconnect', function () {
 		location.reload();
-	});
+	});*/
 </script>
 </body>
 </html>
